--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--text-color);
+  border-radius: 10px;
 }
 
 .input {
@@ -124,5 +126,6 @@ body {
   .result-container {
     width: 100%;
     margin-top: 2rem;
+    padding: 2rem;
   }
 }
