--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
   align-items: center;
   background-color: var(--text-color);
   border-radius: 10px;
+  border: 2px solid var(--secondary-color);
 }
 
 .input {
